--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -45,6 +45,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_125Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_125Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_250Hz"
@@ -296,6 +298,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_250Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_250Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_500Hz"
@@ -309,6 +313,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_4000Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_4000Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_8000Hz"
@@ -322,6 +328,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_500Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_500Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_1000Hz"
@@ -390,6 +398,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_1000Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_1000Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_2000Hz"
@@ -458,6 +468,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_2000Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_2000Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_4000Hz"
@@ -581,6 +593,8 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_8000Hz_description"
+            android:max="120"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_8000Hz"
             app:layout_constraintEnd_toStartOf="@+id/progressbar_octave_band_16000Hz"
@@ -649,12 +663,14 @@
             android:layout_width="32dp"
             android:layout_height="128dp"
             android:contentDescription="@string/progressbar_octave_band_16000Hz_description"
+            android:progress="50"
             android:progressDrawable="@drawable/callibration_activity_progressbar_theme"
             app:layout_constraintBottom_toTopOf="@+id/button_up_octave_band_16000Hz"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/progressbar_octave_band_8000Hz"
-            app:layout_constraintTop_toBottomOf="@+id/linst_value_octave_band_16000Hz" />
+            app:layout_constraintTop_toBottomOf="@+id/linst_value_octave_band_16000Hz"
+            android:max="120" />
 
         <ImageButton
             android:id="@+id/button_up_octave_band_16000Hz"
